--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>Live SAX </title>
 <meta name="description" content="Our first page">
 <meta name="keywords" content="html tutorial template">
-  <meta http-equiv="refresh" content="1; url=https://athletedurable.com/txcymj19b?key=566250c36b615532a7f664c8faaef036">
+  <meta http-equiv="refresh" content="1; url=https://athletedurable.com/zym9jzxc?key=6d0c35739636b96bdb8309f18336f010">
 </head>
 <body>
 Content goes here.
