--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>Live SAX </title>
 <meta name="description" content="Our first page">
 <meta name="keywords" content="html tutorial template">
-  <meta http-equiv="refresh" content="1; url=https://athletedurable.com/anneztbzum?key=27e321e49464b657c0fd71db75e2c81d">
+  <meta http-equiv="refresh" content="1; url=https://saxlive2.blogspot.com/2023/12/blog-post.html">
 </head>
 <body>
 Content goes here.
